base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: teleport-cluster
  namespace: teleport-cluster
spec:
  ingressClassName: public
  tls:
    - hosts:
      - teleport.example.com
      secretName: teleport-tls
  rules:
    - host: teleport.example.com
      http:
        paths:
          - backend:
              service:
                name: teleport-cluster
                port:
                  number: 443
            path: /
            pathType: Prefix
